--- a/index.html
+++ b/index.html
@@ -41,136 +41,8 @@
 
         </div>       
         <script src="js/cherry.js"></script>
-        <script>
-            var timeout;
-            cherry.init('#canvas', {width: 700, height: 400, frame: true,
-                resources: {
-                    terrain: '/home/nazar/NetBeansProjects/cherry/images/sprites/terrain.png',
-                    naruto_sprite3: 'file:///home/nazar/NetBeansProjects/cherry/images/sprites/NarutoSprites3.png'
-                }},
-                    function ($c) {
-                        $c.game_area.show();
-                        $c.game_menu.show($c.frame_count);
-
-                        // var pat = $c.canvas.createPattern($c.images.lamp, 'repeat');
-                        //       $c.canvas.fillStyle = pat;
-                        //     $c.canvas.fill();
-                        /* $c.line([30,40],[[40,100],[50,50],[112, 112],[111,111]],{color:'#005999', width: '6',  lineJoin: 'round',lineCap: 'round'})
-                         .line([100,100], {color:'#FF5999'})
-                         .line([100, 30], {color:'green'})
-                         .line([40, 50], {color: 'orange'});*/
-                        //p($c.images
-                        //$c.image($c.images.naruto_sprite, [70, 119, 28, 39, 30, 150, 28, 39]); 
-                        if (input != undefined) {
-
-                            if (input.isDown('UP')) {
-                                $c.player.pos[1] -= $c.player.speed;
-                            }
-
-                            if (input.isDown('RIGHT')) {
-                                $c.player.action = 'walk';
-                                if (timeout) {
-                                    clearTimeout(timeout);
-                                }
-                                timeout = setTimeout(function () {
-                                    $c.player.state = 0;
-                                    $c.player.progress = 1;
-                                    $c.player.action = 'stand';
-                                }, 100);
-
-                                $c.player.pos[0] += $c.player.speed;
-                            }
-                            if (input.isDown('LEFT')) {
-                                $c.player.pos[0] -= $c.player.speed;
-                            }
-                            if (input.isDown('DOWN')) {
-                                $c.player.pos[1] += $c.player.speed;
-                            }
-                        }
-                        $c.player.show();
-                    }, {
-                player: {
-                    state: 0,
-                    last_change: 0,
-                    progress: 1,
-                    speed: 0.6,
-                    action: 'stand',
-                    pos: [30, 300],
-                    size: [37, 53],
-                    animation: {
-                        stand: {
-                            loop: false,
-                            speed: 180,
-                            slide: [
-                                [17, 20],
-                                [65, 20],
-                                [114, 20],
-                                [164, 20]]},
-                        walk: {
-                            loop: true,
-                            speed: 120,
-                            slide: [
-                                [243, 20],
-                                [288, 20],
-                                [327, 20],
-                                [369, 20],
-                                [411, 18],
-                                [450, 18]
-                            ]}
-                    },
-                    show: function () {
-                        if ($c.lastTime - this.last_change > this.animation[this.action].speed) {
-                            this.last_change = $c.lastTime;
-                            if (this.animation[this.action].loop) {
-                                this.state++;
-                            } else {
-                                this.state = this.state + this.progress;
-                            }
-                            if (this.animation[this.action].slide[this.state] == undefined)
-                            {
-                                if (this.progress > 0)
-                                    this.progress = -1;
-                                else
-                                    this.progress = 1;
-
-                                if (this.animation[this.action].loop) {
-                                    this.state = 0;
-                                } else {
-                                    this.state = this.state + this.progress + this.progress;
-                                }
-
-                            }
-
-                        }
-                        $c.image($c.images.naruto_sprite3, [this.pos, this.size, this.animation[this.action].slide[this.state]]);
-                        return this;
-                    },
-                    press: function (btn_key, callback) {
-                        if (!$c.player.click) {
-                            document.addEventListener('keydown', function (e) {
-                                return callback($c.player);
-                            });
-                            $c.player.click = true;
-                        }
-
-                    }
-                },
-                game_area: {
-                    place: {x1: 20, y1: 20, x2: 500, y2: 350},
-                    show: function () {
-                        //pattern: {img: $c.images.terrain, type: 'no-repeat'},
-                        $c.rect(0, 0, 700, 400, {background: 'yellow', width: 1, line: 'black'})
-                        $c.image($c.images.terrain, [[this.place.x1, this.place.y1], [this.place.x2, this.place.y2], [0,0]]);
-                    }
-                },
-                game_menu: {
-                    place: {x1: 530, y1: 40, x2: 600, y2: 350},
-                    show: function (user_score) {
-                        $c.text('FIRST GAME', {stroke: true, position: [this.place.x1, this.place.y1], color: 'black', font: '24px Arial'})
-                                .text('Frame count: ' + user_score, {position: [this.place.x1, this.place.y1 + 30], color: 'black'})
-                    }
-                }
-            });
+        <script src="js/game.js">
+            
         </script>
     </body>
 </html>
